# mathtoolkit

./: CMakeLists.txt  README.md  VERSION  common.h  matrix.hpp  vector.h
docs/: MathToolkit.xmind  mathtoolbox.zargo
libs/: maintainers.txt  platform-maintainers.txt
libs/matrix/tests/: Makefile  test1.h
mathtoolkit/: matrix.hpp  vector.hpp
mathtoolkit/matrix/: matrix.hpp
tests/: tests  tests.cpp
